step4 code working