@@ -1,7 +1,6 @@
 package com.cinema.domain.admin.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -102,6 +101,6 @@ public class AdminMovieService {
     public List<MovieResponse> getAllMovies() {
         return movieRepository.findAll().stream()
                 .map(MovieResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
