@@ -1,7 +1,6 @@
 package com.cinema.domain.admin.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -93,6 +92,6 @@ public class AdminTheaterService {
     public List<TheaterResponse> getAllTheaters() {
         return theaterRepository.findAll().stream()
                 .map(TheaterResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
